# extrator-de-dados

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py  observability.py
app/api/: deps.py  validators.py
app/api/routers/: invoice.py  pdf_extract.py
app/db/: mongo.py  repositories.py
app/models/: __init__.py  ai_schemas.py  domain.py  invoice_types.py  pdf_extract.py
app/services/: ai_service.py  gemini_ai_service.py  invoice_merge.py  invoice_processors.py  invoice_type_detection.py  llm_text.py  nfe_xml_service.py  nfse_xml_service.py  openai_ai_service.py  pdf_processor.py  prompts.py  xml_extract_common.py  xml_processor.py
app/utils/: logging.py  request_context.py  xml_fingerprint.py  xml_sample.py
docs/: observabilidade.md
tests/: conftest.py  test_ai_service.py  test_api_invoice.py  test_extract_pdf.py  test_fingerprint.py  test_observability.py  test_openapi.py  test_pdf_llm_mapping.py  test_pdf_nfse_invoice_number.py  test_pdf_processor.py  test_pdf_raw_text_truncation.py  test_xml_extract.py
tests/fixtures/: minimal_nfe.xml  minimal_nfse.xml
